--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head><script src="/gdpr/gdprscript.js?buildTime=1234&stealth=false"></script>
-		<title>Vikara by kx.</title>
+		<title>Vajra by kx.</title>
 <link rel="icon" type="image/png" href="http://www.weebly.com/uploads/reseller/assets/3457988190-favicon.ico" />
 
 
@@ -102,7 +102,7 @@ var STYLE_PREFIX = 'wsite';
 
 	<a href="">
 	
-	<span id="wsite-title">vikara.xyz</span>
+	<span id="wsite-title">vajra.xyz</span>
 	
 	</a>
 
@@ -135,7 +135,7 @@ var STYLE_PREFIX = 'wsite';
 					<div class="paragraph" style="text-align:left;"><br /><font color="#412424" size="7">&#8203;Dedicated<br />to<br />Yuisis.&#8203;<br />&#8203;<br /><br />&#8203;More content coming soon.</font></div>
 
 <div style="text-align:center;"><div style="height:0px;overflow:hidden"></div>
-<span class="wsite-social wsite-social-default"><a class='first-child wsite-social-item wsite-social-twitter' href='https://twitter.com/surreptitiouskx' target='_blank' alt-text='Twitter'><span class='wsite-social-item-inner'></span></a><a class='last-child wsite-social-item wsite-social-mail' href='mailto:kx@vikara.xyz' target='_blank' alt-text='Mail'><span class='wsite-social-item-inner'></span></a></span>
+<span class="wsite-social wsite-social-default"><a class='first-child wsite-social-item wsite-social-twitter' href='https://twitter.com/surreptitiouskx' target='_blank' alt-text='Twitter'><span class='wsite-social-item-inner'></span></a><a class='last-child wsite-social-item wsite-social-mail' href='mailto:kx@vajra.xyz' target='_blank' alt-text='Mail'><span class='wsite-social-item-inner'></span></a></span>
 <div style="height:10px;overflow:hidden"></div></div>
 				</div>
 			</div>
