--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head><script src="/gdpr/gdprscript.js?buildTime=1234&stealth=false"></script>
 		<title>Vajra by kx.</title>
-<link rel="icon" type="image/png" href="http://www.weebly.com/uploads/reseller/assets/3457988190-favicon.ico" />
+<link rel="icon" type="image/png" href="https://i.imgur.com/ahaGUBK.png" />
 
 
 
