--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 Shitposting<br>
 Repository</span></h1>
 </div></div>
-<div class="sl-block" data-block-type="video" data-block-id="1d136b8d11d0d1a7aa67b52ebdfd72df" style="min-width: 30px; min-height: 30px; width: 481.538px; height: 856.067px; left: 480px; top: -26.864px;"><div class="sl-block-content" style="z-index: 11;" data-media-id="7035154" data-video-thumb="https://s3.amazonaws.com/media-p.slid.es/videos/1262663/CTGcI7yl/ezgif_thumb_00001.jpg"><video playsinline="" poster="https://s3.amazonaws.com/media-p.slid.es/videos/1262663/CTGcI7yl/ezgif_thumb_00001.jpg" loop="loop" data-paused-by-reveal="" data-autoplay="" muted="" data-src="https://s3.amazonaws.com/media-p.slid.es/videos/1262663/CTGcI7yl/ezgif.mp4"></video></div></div></section><section data-id="7f8dc068f1963e857c8af23cb2a8841a"><div class="sl-block" data-block-type="text" data-block-id="10e701193dabfee9dd91184b9ae12a07" style="height: auto; width: 600px; left: 180px; top: 54px;"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 10;" dir="ui">
+<div class="sl-block" data-block-type="video" data-block-id="1d136b8d11d0d1a7aa67b52ebdfd72df" style="min-width: 30px; min-height: 30px; width: 481.538px; height: 856.067px; left: 480px; top: -26.864px;"><div class="sl-block-content" style="z-index: 11;" data-media-id="7035154" data-video-thumb="https://s3.amazonaws.com/media-p.slid.es/videos/1262663/CTGcI7yl/ezgif_thumb_00001.jpg"><video playsinline="" poster="https://s3.amazonaws.com/media-p.slid.es/videos/1262663/CTGcI7yl/ezgif_thumb_00001.jpg" loop="loop" data-paused-by-reveal="" data-autoplay="" muted="" data-src="https://i.imgur.com/v7uAyEw.mp4"></video></div></div></section><section data-id="7f8dc068f1963e857c8af23cb2a8841a"><div class="sl-block" data-block-type="text" data-block-id="10e701193dabfee9dd91184b9ae12a07" style="height: auto; width: 600px; left: 180px; top: 54px;"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 10;" dir="ui">
 <p>Everything is still under construction tho</p>
 
 <p>so here's a photo of Alex sleeping</p>
 </div></div>
-<div class="sl-block" data-block-type="image" data-block-id="53c015d2ab04c3f47ef7796d07a628cd" style="width: 303.188px; height: 539px; left: 336.812px; top: 150.5px;"><div class="sl-block-content" style="z-index: 11;"><img style="" data-natural-width="540" data-natural-height="960" data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/1262663/images/7035124/WhatsApp_Image_2020-02-06_at_1.31.05_PM.jpeg"></div></div></section></section>
+<div class="sl-block" data-block-type="image" data-block-id="53c015d2ab04c3f47ef7796d07a628cd" style="width: 303.188px; height: 539px; left: 336.812px; top: 150.5px;"><div class="sl-block-content" style="z-index: 11;"><img style="" data-natural-width="540" data-natural-height="960" data-src="https://i.imgur.com/wCXaF3F.jpg"></div></div></section></section>
 			</div>
 		</div>
 
